--- a/package.json
+++ b/package.json
@@ -10,5 +10,14 @@
     "react"
   ],
   "author": "Allen Wu",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "autoprefixer": "^6.0.2",
+    "browser-sync": "^2.9.3",
+    "postcss-cli": "^2.1.0",
+    "postcss-import": "^7.0.0"
+  },
+  "dependencies": {
+    "normalize.css": "^3.0.3"
+  }
 }
